--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,8 @@
 #
 ---
 include:
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: corne_left nice_view_adapter nice_view
-  - board: nice_nano
+    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view
